# kubernetes

./: ADAPTCO Business Plan.docx  Business Profiler-saved.md  Dockerfile  QubeAgent.js  QubeAgent.test.js  QubeAgent.test.ts  QubeAgent.ts  QubeApi.js  QubeApi.ts  README.md  The_Qube_Seed_Deck.pptx  eigenstate_logger.js  eigenstate_logger.ts  gpt_schema.json  jurassic_pixels_replay_seed_1337.json  openapi.json  package-lock.json  package.json  tsconfig.json  windchill_telemetry_import.csv
.github/workflows/: corridor_ci.yml
docling-cluster/: .gitignore  README.md  docker-compose.yml  kind-cluster.yaml  package.json  pyproject.toml
docling-cluster/k8s/: configmap.yaml  deployments.yaml  kind-cluster.yaml
docling-cluster/lib/: __init__.py  canonical.py  ledger.py  normalize.py
docling-cluster/schemas/: __init__.py  chunk_embedding_v1.py  doc_normalized_v1.py
docling-cluster/scripts/: deploy-local.bat  deploy-local.sh  verify_batch.py  verify_logic.py
docling-cluster/services/docling-worker/: Dockerfile  requirements.txt  worker.py
docling-cluster/services/embed-worker/: Dockerfile  requirements.txt  worker.py
docling-cluster/services/embed_worker/: requirements.txt  worker.py
docling-cluster/services/ingest-api/: Dockerfile  main.py  requirements.txt
docling-cluster/tests/: __init__.py  conftest.py  test_integration.py  test_replay.py
jurassic_sdk/src/: lib.rs  refusal.rs
parts/: current.cad
receipts/golden/: receipt.json
scripts/: cam_receipt_diff.py  cam_runner.py
tests/: test_cam_receipt_diff.py  test_cam_runner.py
