[project]
name = "docling-cluster"
version = "0.1.0"
description = "Deterministic document processing pipeline"
requires-python = ">=3.11"
dependencies = [
    "docling>=1.0.0",
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "celery[redis]>=5.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "qdrant-client>=1.6.0",
    "redis>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

